@@ -1,6 +1,11 @@
 2007-01-31  Julien MOUTTE  <julien@moutte.net>
 
 	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps),
+	(dmo_videoenc_chain): Some more fixes.
+
+2007-01-31  Julien MOUTTE  <julien@moutte.net>
+
+	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps),
 	(dmo_videoenc_chain): Port debug messages and errors
 	to 0.10.
 
